--- a/templates/login.html
+++ b/templates/login.html
@@ -14,9 +14,6 @@
     <div class="header container">
       <div class="nav-bar">
         <div class="brand">
-          <a href="/index">
-            <h1><span>โ</span>รงพยาบาล <span>ข</span>อนแก่น</h1>
-          </a>
         </div>
         <div class="nav-list">
           <div class="hamburger">
@@ -40,7 +37,7 @@
                     <div class="foot-1">
                       <div class="form-group">
                     <div style="padding:10px; border: 1px solid #eeeeee; background-color: #FAFFF5;">
-                        <form action="{{url_for('select')}}" enctype = "multipart/form-data" name="frmLogin" method="post">
+                        <form action="{{url_for('home1')}}" enctype = "multipart/form-data" name="frmLogin" method="post">
                           ล็อกอินเข้าสู่ระบบ...<br>
                           <table border="0" cellspacing="10" cellpadding="5" style="width: 300px">
                             <tbody>
