--- a/templates/show.html
+++ b/templates/show.html
@@ -18,9 +18,6 @@
     <div class="header container">
       <div class="nav-bar">
         <div class="brand">
-          <a href="/index">
-            <h1><span>โ</span>รงพยาบาล <span>ข</span>อนแก่น</h1>
-          </a>
         </div>
         <div class="nav-list">
           <div class="hamburger">
@@ -30,7 +27,7 @@
             <li class="nav-item active"><a class="nav-link" href="/index" data-after="/Home">Home <span class="sr-only"></span></a></li>
             <li class="nav-item active"><a class="nav-link" href="#services" data-after="/Service">Services</a></li>
             <li class="nav-item active"><a class="nav-link" href="/about" data-after="/About">About</a></li>
-            <li class="nav-item active"><a class="nav-link" href="contact" data-after="/Contact">Contact</a></li>
+            <li class="nav-item active"><a class="nav-link" href="/contact" data-after="/Contact">Contact</a></li>
           </ul>
         </div>
       </div>
