--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,14 @@
 <html lang="en">
 
 <head>
+  <style>
+    img {
+      border-radius: 100%;
+      position: relative;
+      top: -260px;
+      left: -220px;
+    }
+    </style>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="{{ url_for('static',    filename='CSS/style.css') }}">
@@ -14,9 +22,6 @@
     <div class="header container">
       <div class="nav-bar">
         <div class="brand">
-          <a href="/index">
-            <h1><span>โ</span>รงพยาบาล <span>ข</span>อนแก่น</h1>
-          </a>
         </div>
         <div class="nav-list">
           <div class="hamburger">
@@ -38,6 +43,9 @@
   <!-- Hero Section  -->
   <section id="hero">
     <div class="hero container">
+      <a href="/index">
+      <img src="/static/images/logohot.png" alt="Girl in a jacket" style="width:250px;height:250px;">
+    </a>
       <div>
         <h2>ยินดีต้อนรับเข้าสู่เว็บไซต์ <span></span></h2>
         <h2>We are here for your care 24/7. <span></span></h2>
@@ -47,31 +55,6 @@
   </section>
   <!-- End Hero Section  -->
 
-  <!-- Footer -->
-  <section id="footer">
-    <div class="footer container">
-      <div class="brand">
-        <h1><span>S</span>haif <span>A</span>rfan</h1>
-      </div>
-      <h2>Your Complete Web Solution</h2>
-      <div class="social-icon">
-        <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/facebook-new.png" /></a>
-        </div>
-        <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png" /></a>
-        </div>
-        <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/twitter.png" /></a>
-        </div>
-        <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/behance.png" /></a>
-        </div>
-      </div>
-      <p>Copyright © 2022 Kanyarat.P, Moltira.S. All rights reserved</p>
-    </div>
-  </section>
-  <!-- End Footer -->
   <script src="./app.js"></script>
   {% block content %}
     {% endblock %}
